apply patch #55 by @reudismam which doesn't apply properly on this branch